--- a/02-Homework/Develop/assets/css/oldstyle.css
+++ b/02-Homework/Develop/assets/css/oldstyle.css
@@ -149,12 +149,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead .benefit-brand .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/* .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -163,13 +163,14 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+*/
 
-.benefit-lead h3 {
+.benefit-lead .benefit-brand .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} 
 
-.benefit-brand h3 {
+/* .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -177,15 +178,15 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-.benefit-lead img {
+.benefit-lead .benefit-brand .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
+/* .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -195,7 +196,7 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
 
 .footer {
