--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .header h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 80px;
 }
 
 .header h1 .seo {
@@ -29,16 +29,17 @@ body {
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 24px;
+    font-size: 30px;
 }
 
 .header nav ul {
     list-style-type: none;
+    padding-top: 15px;
 }
 
 .header nav ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-right: 50px;
 }
 
 a {
@@ -46,16 +47,16 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 20px;
-    /* width: 750px; */
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .image {
-    height: 800px;
     width: 100%;
+    height: 1250px;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url(../images/digital-marketing-meeting.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -81,20 +82,25 @@ p {
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
-    padding: 50px;
-    height: 350px;
+    padding: 75px;
+    height: 500px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
-    max-height: 250px;
+    max-height: 350px;
 }
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 48px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    font-size: 60px;
+}
+
+p {
+    font-size: 27px;
 }
 
 /* Attributes for Benefits (Aside Section) */
@@ -104,25 +110,27 @@ p {
     clear: both;
     float: right;
     width: 20%;
-    height: 1150px;
+    height: 1600px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
 .benefit-lead, .benefit-brand, .benefit-cost {
-    margin-bottom: 32px;
+    margin-bottom: 40px;
+    height: 470px;
     color: #ffffff;
 }
 
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
+    font-size: 28px;
     text-align: center;
 }
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
+    max-width: 250px;
 }
 
 .footer {
